# data-engineer-zoomcamp

./: .gitignore  pyproject.toml
week1/: homework-week1.ipynb
week1/2_docker_sql/: Dockerfile  Pipfile  note_docker_old.md  pipeline.py  upload_data.ipynb
week1/basic_setup/2_docker_sql/: Dockerfile  Pipfile  README.md  note.txt  note_docker.md  test.ipynb  upload-data.py
week2/intro_to_prefect/: ingest_data.py
week4/: NOTE.md
week4/src/: compose.yml
week4/src/dbt/taxi_ride_ny/: dbt_project.yml
