[tool.poetry]
name = "de-zoomcamp"
version = "0.1.0"
description = "this env for dezoomcamp"
authors = ["pnnpys <punyisa.le@ku.th>"]
readme = "README.md"
packages = [{include = "de_zoomcamp"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
psycopg2 = "^2.9.5"
sqlalchemy = "1.4.46"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
